# svc-events

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: event_id.rs  lib.rs  video_group.rs
src/serde/: bounded_date_time_tuple.rs  milliseconds_bound_tuples.rs  mod.rs  time.rs
src/serde_ext/: mod.rs  segments.rs
src/v1/: agent.rs  ban.rs  edition.rs  event.rs  mod.rs  room.rs  stage.rs  video_group.rs  video_group_intent.rs
