[package]
name = "svc-events"
version = "0.10.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/foxford/svc-events"
description = "Foxford events"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
svc-agent = "0.21"
svc-authn = "0.8"
svc-error = { version = "0.6", git = "https://github.com/foxford/svc-error-rs", branch = "eq-partial-eq" }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
