[package]
name = "svc-events"
version = "0.12.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/foxford/svc-events"
description = "Foxford events"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svc-authn = "0.8"
svc-agent = { git = "https://github.com/foxford/svc-agent-rs", branch = "make-mqtt-optional", default-features = false }
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
